k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: k8s-simple-web
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
